--- a/PW5V3-0202/MainWindow.xaml
+++ b/PW5V3-0202/MainWindow.xaml
@@ -5,13 +5,24 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:PW5V3_0202"
         mc:Ignorable="d"
-        Title="AlternationV3" Height="450" Width="800">
-    <DockPanel>
-        <Menu>
-            <MenuItem Header="Создать"/>
-            <MenuItem Header="Заполнить"/>
-            <MenuItem Header="Очистить"/>
-            <MenuItem Header="Выход"/>
-        </Menu>
-    </DockPanel>
+        Title="MainWindow" Height="647.204" Width="800">
+    <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="97*"/>
+            <RowDefinition Height="107*"/>
+            <RowDefinition Height="95*"/>
+            <RowDefinition Height="114*"/>
+            <RowDefinition Height="180*"/>
+        </Grid.RowDefinitions>
+        <DataGrid x:Name="DataGrid1" Margin="0,0,0,6"></DataGrid>
+        <DataGrid x:Name="DataGrid4" Margin="0,16,0,7" Grid.Row="3"/>
+        <DataGrid x:Name="DataGrid3" Margin="0,2,0,3" Grid.Row="2"/>
+        <DataGrid x:Name="DataGrid2" Margin="0,6,0,10" Grid.Row="1"/>
+        <DataGrid x:Name="DataGrid5" Margin="0,11,0,83" Grid.Row="4"/>
+        <TextBox x:Name="size" Margin="181,126,501,29" Grid.Row="4"></TextBox>
+        <Button Margin="309,126,358,29" Grid.Row="4" Content="Создать и заполнить" Click="CreateFill_Click"></Button>
+        <Label Margin="10,125,632,30" Grid.Row="4" Content="Размер массивов" FontSize="16"></Label>
+        <Button Margin="439,126,278,29" Grid.Row="4" Content="Рассчитать"/>
+        <TextBox x:Name="size_Copy" Margin="533,125,30,30" Grid.Row="4"/>
+    </Grid>
 </Window>
